Removed HTML support

--- a/MHScript.csproj
+++ b/MHScript.csproj
@@ -67,7 +67,7 @@
     <Compile Include="engine\objects\ScriptInterruptException.cs" />
     <Compile Include="lexems\Lexem.cs" />
     <Compile Include="lexems\LexemDefinitions.cs" />
-    <Compile Include="lexems\LexemDefinitionTypes.cs" />
+    <Compile Include="lexems\LexemTypes.cs" />
     <Compile Include="lexems\LexemParser.cs" />
     <Compile Include="Parser.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
