--- a/MHScript.csproj
+++ b/MHScript.csproj
@@ -57,7 +57,7 @@
   <ItemGroup>
     <Compile Include="engine\Engine.cs" />
     <Compile Include="engine\FunctionType.cs" />
-    <Compile Include="engine\ErrorHelper.cs" />
+    <Compile Include="engine\ExceptionHelper.cs" />
     <Compile Include="engine\objects\CustomVariable.cs" />
     <Compile Include="engine\objects\VariableFunction.cs" />
     <Compile Include="engine\objects\ScriptException.cs" />
